September 30, 2009: Released version 0.9.6:

- Fixed deprecation warning on Python 2.6.
- Dropped support for Python 2.3.

February 27, 2009: Released version 0.9.5:

- Fixed crash on 64-bit Linux machines.
- Now using http://launchpad.net/ for bug tracking.

June 30, 2008: Released version 0.9.4:

- New icon by Jakub Szypulka, plus all the other goodies from last year.

January 7, 2007: Happy New Year!

- Add sound effects and support for background music (now if I only had some
  music...).
- Show an animation (expanding bubble) when ships respawn.
- Allow up to two keys to be bound to the same action.
- Use 800x600 by default; if your computer is fast enough, you can change to
  a better video mode; if not, give a better first impression by avoiding
  sluggishness.
- Change the options menu: show the current state (e.g. "missile orbits: on")
  instead of the action that would change it ("hide missile orbits").  Add
  an option to toggle sound propagation in vacuum (or, in practical terms,
  whether you hear a sound when a missile hits the computer-controlled ship
  or when it explodes).
- Forgot to actually make a release :(

December 25, 2006: Released version 0.9.3: the Christmas release.

- Keyboard controls can now be customized.
- Keyboard controls and video mode options are stored in a config file.
- Added the -w command line option, in case you desire to override the config
  file.

February 20, 2006: Released version 0.9.2 (also known as the "a month of
procrastination" release).

- Fixed the -f and -d command line options.
- Missiles are now larger and brighter than their orbit trail dots.
- Alt+Enter now also toggles fullscreen mode.
- Make it work in 15 and 16 bit per pixel modes (no aaline).
- Possibly fix the MacOS X "invisible fix" problem I saw (use 2 x aaline
  instead of aalines).
- Added a help screen.
- Added an Options menu.
- Added a New Game menu (the main menu was becoming too cluttered).